swrast: fix glReadPixels from texture attachment

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=42635